# ShveinyiHUB-botzipzip-1zip

./: .replit  config.py  pyproject.toml  replit.md  requirements.txt  run_services.py
attached_assets/: Qwen_html_20251225_c7ok59nid_1766676130064.html  Qwen_python_20251225_3envbdxnj_1766676120096.py
handlers/: admin.py
templates/: index.html
webapp/: .admin_password.hash  app.py
webapp/templates/: webapp.html
