[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "gigachat==0.1.29",
    "gunicorn==22.0.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "python-telegram-bot==20.7",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
]
